adds timezone, temp and weather details

--- a/weather/weather.html
+++ b/weather/weather.html
@@ -15,6 +15,13 @@
            <input type="submit" value="Search"> 
      </form>
 
+     <div id="currentWeather-container">
+         
+        <div id="currentDate"></div>
+        <div id="details"> </div>
+ 
+
+     </div>      
   </main>     
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
